--- a/www/index.html
+++ b/www/index.html
@@ -186,7 +186,10 @@
         <script src="assets/js/mapsubmit.js"></script>
 
 
-        <div data-role="content" data-theme="a" class="content">
+        <div data-role="content" data-theme="a" class="content" id="map-canvas">
+
+
+            <!--
 
             <h3 class="textCenter">Itinéraire</h3>
 
@@ -204,7 +207,10 @@
 
             <div id="map-directions"></div>
 
+        -->
+
         </div>
+
 
         <div data-role="footer" data-position="fixed">
             <div class="footerBtn textCenter">
@@ -516,6 +522,12 @@
         </div>
     </div>
     <!-- **************************** FIN PAGE RECHERCHE PARCOURS SEARCH **************************** -->
+
+    <script type="javascript">
+
+
+    </script>
+
 
 </body>
 
