--- a/www/index.html
+++ b/www/index.html
@@ -58,9 +58,38 @@
             <a href="#connexion" data-transition="slide"     data-role="button">Connexion avec email</a>
 
         </div>
+
+        <div data-role="content" data-theme="c" class="content">
+            <a href="#sigin" data-transition="slide"     data-role="button">Inscription</a>
+
+        </div>
     </div>
     <!-- **************************** FIN CONNEXION **************************** -->
 
+    <!-- **************************** PAGE INSCRIPTION **************************** -->
+    <div data-role="page" data-theme="a" id="sigin">
+        <div data-role="header" data-position="inline">
+            <a href="#login" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
+        </div>
+        <div data-role="content" data-theme="a" class="content">
+
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" data-mini="true" ng-model="inscr.email" required/>
+
+            <label for="password">Mot de passe</label>
+            <input type="password" name="password" id="password" data-mini="true" ng-model="inscr.password" required/>
+
+            <label for="travail">Lieu de travail</label>
+            <input type="text" data-clear-btn="true" name="travail" id="travail" value="" placeholder="Lieu dit, rue, monument..." ng-model="inscr.travail" required>
+
+            <div data-role="content" data-theme="c" class="content">
+                <a data-role="button" ng-click="sigin()">S'enregistrer</a>
+            </div>
+
+        </div>
+    </div>
+    <!-- **************************** FIN PAGE INSCRIPTION **************************** -->
 
     <!-- **************************** PAGE CONNEXION EMAIL **************************** -->
     <div data-role="page" data-theme="a" id="connexion">
