--- a/www/index.html
+++ b/www/index.html
@@ -263,15 +263,14 @@
 
         </div>
 
-        <div data-role="popup" id="popupDialog" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
+        <div data-role="popup" id="popupSearch" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
             <div data-role="header" data-theme="a">
-                <h1>Delete Page?</h1>
+                <h1>Félicitation !</h1>
             </div>
             <div role="main" class="ui-content">
-                <h3 class="ui-title">Are you sure you want to delete this page?</h3>
-                <p>This action cannot be undone.</p>
-                <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">Cancel</a>
-                <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back" data-transition="flow">Delete</a>
+                <h3 class="ui-title">Vous êtes arrivé à destination, découvrez votre bilan et confirmez votre participation dès maintenant !</h3>
+                <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">Continuer</a>
+                <a href="#bilanSearch" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow">Accéder à mon bilan</a>
             </div>
         </div>
 
@@ -596,6 +595,25 @@
         </div>
     </div>
     <!-- **************************** FIN PAGE RECHERCHE PARCOURS SEARCH **************************** -->
+
+
+
+    <!-- **************************** PAGE CONNEXION EMAIL **************************** -->
+    <div data-role="page" data-theme="a" id="bilanSearch">
+        <div data-role="header" data-position="inline">
+            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
+        </div>
+        <div data-role="content" data-theme="a" class="content">
+
+            <p>Bilan</p>
+
+        </div>
+    </div>
+    <!-- **************************** FIN PAGE CONNEXION EMAIL **************************** -->
+
+
+
 
     <script type="javascript">
 
