--- a/www/index.html
+++ b/www/index.html
@@ -270,7 +270,7 @@
             <div role="main" class="ui-content">
                 <h3 class="ui-title">Vous êtes arrivé à destination, découvrez votre bilan et confirmez votre participation dès maintenant !</h3>
                 <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">Continuer</a>
-                <a href="#bilanSearch" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow">Accéder à mon bilan</a>
+                <a href="#bilanSearch" id="bilanOK" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow">Accéder au bilan</a>
             </div>
         </div>
 
