--- a/www/index.html
+++ b/www/index.html
@@ -84,6 +84,12 @@
             <input type="text" data-clear-btn="true" name="travail" id="travail" value="" placeholder="Lieu dit, rue, monument..." ng-model="inscr.travail" required>
 
             <div data-role="content" data-theme="c" class="content">
+                <span ng-if="error == 'email_duplication'">Cet email est déjà utilisé</span>
+                <span ng-if="error == 'inscrit'">Vous êtes inscrit</span>
+                <span ng-if="error == 'adresse'">Veuillez vérifier votre adresse</span>
+            </div>
+
+            <div data-role="content" data-theme="c" class="content">
                 <a data-role="button" ng-click="sigin()">S'enregistrer</a>
             </div>
 
@@ -99,7 +105,23 @@
         </div>
         <div data-role="content" data-theme="a" class="content">
 
-            <p>Connexion</p>
+            <div data-role="content" data-theme="a" class="content">
+
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email_co" data-mini="true" ng-model="co.email" required/>
+
+                <label for="password">Mot de passe</label>
+                <input type="password" name="password" id="password_co" data-mini="true" ng-model="co.password" required/>
+
+                <div data-role="content" data-theme="c" class="content">
+                    <span ng-if="error == 'no_user'">Utilisateur non reconnu ou mot de passe incorrect</span>
+                </div>
+
+                <div data-role="content" data-theme="c" class="content">
+                    <a data-role="button" ng-click="connection()">Se connecter</a>
+                </div>
+
+            </div>
 
             <p><a href="#home"  data-transition="slide">Home</a></p>
 
@@ -114,6 +136,9 @@
             <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
+
+            <h2 class="textCenter" ng-if="user.email">Bienvenue {{user.email}}</h2>
+
             <h3 class="textCenter">L'ardèche éco-responsable</h3>
 
             <div class="ui-grid-a btnChoix">
@@ -132,7 +157,7 @@
 
             <p>Déjà</p>
             <div class="ges">
-                <p>XXX g</p>
+                <p>{{user.ges}} g</p>
             </div>
             <p>économisé grâce à vous</p>
 
