--- a/www/index.html
+++ b/www/index.html
@@ -258,7 +258,7 @@
 
 
                 <a href="#" id="centerBtn"><div class="floatLeft camera"><p><i class="fa fa-crosshairs fa-lg"></i></p></div></a>
-                <div class="floatRight distance" id="distParcours"></div>
+                <div class="floatRight distance" id="distanceParcours"></div>
             </div>
 
         </div>
