--- a/www/index.html
+++ b/www/index.html
@@ -113,7 +113,7 @@
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password_co" data-mini="true" ng-model="co.password" required/>
 
-                <div data-role="content" data-theme="c" class="content">
+                <div data-role="content" id="log" data-theme="c" class="content">
                     <span ng-if="error == 'no_user'">Utilisateur non reconnu ou mot de passe incorrect</span>
                 </div>
 
